--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "backend": "nodemon index.js",
     "start": "node index.js",
-    "dev": "concurrently \"npm run backend\" \"cd ..\\client && npm run start --prefirx client\" "
+    "dev": "concurrently \"npm run backend\" \"cd ..\\client && npm run start --prefirx client\" ",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Juhwan Kim",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "path": "^0.12.7"
   }
 }
