--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This is first node app",
   "main": "index.js",
   "engine": {
-    "node": "10.16.0",
-    "npm": "6.9.0"
+    "node": "v14.15.3",
+    "npm": "6.14.9"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
